--- a/README.org
+++ b/README.org
@@ -28,7 +28,11 @@ of a file, so any contributions are very appreciated.
 
 * Table of Contents
 
-TODO
+ 1. [[chapter/01-introduction.org][Introduction]]
+    + [[chapter/01-introduction.org#what-is-twine][What is Twine?]]
+    + [[chapter/01-introduction.org#what-is-a-story-format][What is a story format?]]
+    + [[chapter/01-introduction.org#what-is-the-difference-between-a-story-format-and-a-proofing-format][What is the difference between a story format and a proofing
+      format?]]
 
 * License
 
