--- a/part1-documentation/01-introduction.org
+++ b/part1-documentation/01-introduction.org
@@ -1,4 +1,4 @@
-#+TITLE:       Twine 2 Story and Proofing Format Documentation
+#+TITLE:       Introduction
 #+AUTHOR:      Ashlynn Anderson
 #+EMAIL:       ashlynn@pea.sh
 #+DATE:        2020-01-05
