--- a/part1-documentation/02-the-story-data-format.org
+++ b/part1-documentation/02-the-story-data-format.org
@@ -19,64 +19,43 @@ This chapter will go over the structure of these custom elements.
 
 * Custom Elements
 
-** ~<tw-storydata>~
-
-*** attributes
-
- | name            |   |
- | startnode       |   |
- | creator         |   |
- | creator-version |   |
- | ifid            |   |
- | zoom            |   |
- | format          |   |
- | format-version  |   |
- | options         |   |
-
-*** content
-
-The ~<tw-storydata>~ element encloses all other published story
-data. This consists of the following sections: 
-
- - A ~<style>~ element containing the story's custom CSS with the
-   attributes:
-
-   | role | stylesheet            |
-   | id   | twine-user-stylesheet |
-   | type | text/twine-css        |
-
- - a ~<script>~ element containing the story's custom javascript with
-   the attributes:
-
-   | role | script                |
-   | id   | twine-user-script     |
-   | type | text/twine-javascript |
-
- - many ~<tw-tag>~ elements, one for each of the story's tags
- - many ~<tw-passagedata>~ elements, one for each of the story's
-   passages 
-
-** ~<tw-tag>~
-
-*** attributes
-
- | name  |   |
- | color |   |
-
-*** content
-
-none
-
-** ~<tw-passagedata>~
-
-*** attributes
-
- | pid      |   |
- | name     |   |
- | tags     |   |
- | position |   |
- | size     |   |
-
-*** content
-
-The unmodified text of the passage.
+ + ~<tw-storydata>~
+   - attributes
+     | name            |   |
+     | startnode       |   |
+     | creator         |   |
+     | creator-version |   |
+     | ifid            |   |
+     | zoom            |   |
+     | format          |   |
+     | format-version  |   |
+     | options         |   |
+   - content
+     + A ~<style>~ element containing the story's custom CSS with the
+       attributes:
+       | role | "stylesheet"            |
+       | id   | "twine-user-stylesheet" |
+       | type | "text/twine-css"        |
+     + a ~<script>~ element containing the story's custom javascript with
+       the attributes:
+       | role | "script"                |
+       | id   | "twine-user-script"     |
+       | type | "text/twine-javascript" |
+     + many ~<tw-tag>~ elements, one for each of the story's tags
+     + many ~<tw-passagedata>~ elements, one for each of the story's
+       passages 
+ + ~<tw-tag>~
+   - attributes
+     | name  |   |
+     | color |   |
+   - content
+     + n/a
+ + ~<tw-passagedata>~
+   - attributes
+     | pid      |   |
+     | name     |   |
+     | tags     |   |
+     | position |   |
+     | size     |   |
+   - content
+     + The unmodified text of the passage.
