Restructure "Part 1. Documentation"

--- a/part1-documentation/03-parsing-story-data.org
+++ b/part1-documentation/03-parsing-story-data.org
@@ -1,4 +1,4 @@
-#+TITLE:       The Story Data Format
+#+TITLE:       Parsing Story Data
 #+AUTHOR:      Ashlynn Anderson
 #+EMAIL:       ashlynn@pea.sh
 #+DATE:        2020-01-05
