--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
 
  | Status:   | In-Progress                                                     |
  | Location: | [[https://github.com/transitracer/twine-storyformat-documentation]] |
- | Version:  | 0.2.0                                                           |
+ | Version:  | 0.3.0                                                           |
 
 * Motivation
 
@@ -33,10 +33,9 @@ of a file, so any contributions are very appreciated.
       - [[part1-documentation/01-introduction.org#what-is-twine][What is Twine?]]
       - [[part1-documentation/01-introduction.org#what-is-a-story-format][What is a story format?]]
       - [[part1-documentation/01-introduction.org#what-is-the-difference-between-a-story-format-and-a-proofing-format][What is the difference between a story format and a proofing format?]]
-   2. [[part1-documentation/02-the-story-data-format.org#the-story-data-format][The Story Data Format]]
-      - [[part1-documentation/02-the-story-data-format.org#overview][Overview]]
-      - [[part1-documentation/02-the-story-data-format.org#custom-elements][Custom Elements]]
-   3. Making Your Story Format Importable
+   2. Structure of a Story Format
+   3. [[part1-documentation/03-parsing-story-data.org#parsing-story-data][Parsing Story Data]]
+   4. Packaging Your Story Format
  + Part 2: Cookbook
    1. TODO
 
